# generic-lens-dot

./: CHANGELOG.md  LICENSE  README.md  generic-lens-dot.cabal
.github/workflows/: haskell-ci.yml
lib/Data/Generics/Product/: Dot.hs
lib/Data/Generics/Product/Fields/: Dot.hs
test/: MyLibTest.hs  tests.hs
